--- a/workflow/notebooks/duckdb.ipynb
+++ b/workflow/notebooks/duckdb.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "id": "74ffed71-0a24-4873-8847-735e842cf22c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "c3801abe-5592-4c73-9afd-e13c3a6e1282",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "3b9cc020-4bea-4f58-a858-e309ec75aeda",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "af080d6c-58d2-45de-b090-265bf211f490",
    "metadata": {},
    "outputs": [
@@ -159,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "d816436a-d742-4d28-951b-5d0f8aacea50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "duckdb.sql(\"COPY tidy_data TO 'test_output.csv'\")"
+    "duckdb.sql(\"COPY tidy_data TO 'C_LC.test.csv'\")"
    ]
   },
   {
